# claude-course

./: Readme.md
backend/: env_example.txt  pyproject.toml
backend/src/: context7_integration.py  main.py  rag_system.py  tools.py
frontend/app/: page.tsx
